--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "personal-portfolio",
+  "homepage": "https://Solomon-Dzokoto.github.io/personal-portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,6 +8,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,6 +20,7 @@
     "autoprefixer": "^10.4.20",
     "framer": "^2.4.1",
     "framer-motion": "^11.11.17",
+    "gh-pages": "^6.2.0",
     "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
