--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "predeploy":"npm run build",
+    "predeploy":"npm run deploy",
     "deploy":"gh-pages -d dist",
     "preview": "vite preview"
   },
